blueprint-examples/virtual-machine/resources/arm/environment.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string"
        },
        "vnet_name": {
            "type": "string"
        },
        "subnet_name": {
            "type": "string"
        },
        "nsg_name": {
            "type": "string"
        },
        "public_ip_name": {
            "type": "string"
        },
        "storage_account_name": {
            "type": "string"
        },
        "vm_name": {
            "type": "string"
        },
        "vm_size": {
            "type": "string"
        },
        "image": {
            "type": "object"
        },
        "priority": {
            "type": "string"
        },
        "nic_name": {
            "type": "string"
        },
        "ip_config_name": {
            "type": "string"
        },
        "admin_user": {
            "type": "string"
        },
        "public_key_data": {
            "type": "string"
        }
    },
    "variables": {
        "subnet_full_name": "[concat(parameters('vnet_name'), '/', parameters('subnet_name'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "name": "[parameters('vnet_name')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnet_name')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-11-01",
            "name": "[variables('subnet_full_name')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.0.0/24"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-04-01",
            "name": "[parameters('nsg_name')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "description": "SSH access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "http_jboss",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "http_jboss_admin",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9990",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "dokcer_api_port",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2375",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "localstack_port",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4566",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "localstack_api_port",
                        "properties": {
                            "description": "HTTP access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4571",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 106,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-04-01",
            "name": "[parameters('public_ip_name')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-04-01",
            "name": "[parameters('storage_account_name')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[parameters('vm_name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/StorageAccounts', parameters('storage_account_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vm_size')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('image').publisher]",
                        "offer": "[parameters('image').offer]",
                        "sku": "[parameters('image').sku]",
                        "version": "[parameters('image').version]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[parameters('vm_name')]",
                        "createOption": "FromImage"
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('vm_name')]",
                    "adminUsername": "[parameters('admin_user')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', parameters('admin_user'), '/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('public_key_data')]"
                                }
                            ]
                        }
                    }
                },
                "priority": "[parameters('priority')]",
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic_name'))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-04-01",
            "name": "[parameters('nic_name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('public_ip_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnet_name'), parameters('subnet_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[parameters('ip_config_name')]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('public_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnet_name'), parameters('subnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_name'))]"
                },
                "primary": true
            }
        }
    ],
    "outputs": {
        "public_ip": {
            "type": "string",
            "value": "[reference(parameters('public_ip_name')).ipAddress]"
        }
    }
}
